Started description of Deutch's Algorithm

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -511,6 +511,7 @@
         &ldquo;half silvered mirror&rdquo;,
         which reflects some of the light and lets some of the light through.
     </p>
+    <img src="interferometer.jpg" class="mediumImage" alt="Interferometer"/>
     <p>
         Individual photons end up in a superposition of
         having been reflected
@@ -523,16 +524,25 @@
         Like the T operator described earlier,
         a change in the relative path lengths will alter
         the relative phases of the two photon states.
+        A difference equal to the wavelength of light is enough to
+        change the relative phases by an entire 360 degrees.
         If the phases are exactly opposite,
         then they will cancel each other out,
         and the detector will not detect anything.
+        The resulting effect will be an alternating series of light
+        and dark concentric rings like those shown below.
+    </p>
+    
+    <img src="interferencePattern.jpg" class="mediumImage" alt="Interference Pattern"/>
+    
+    <p> 
         <b>
             This interference effect even happens when
             the light source is slowly emmitting photons
             one at a time.
         </b>
     </p>
-    <img src="interferometer.jpg" class="mediumImage" alt="Interferometer"/>
+   
     <p>
         If detectors are placed on either or both of the two paths,
         then the act of detecting the presence (or absence) of the photon
