Add a section on D-Wave

--- a/qtalk3/part2.html
+++ b/qtalk3/part2.html
@@ -680,6 +680,43 @@
 </section>
 
 <section>
+    <h1>D-Wave</h1>
+    <p>
+        You may have heard of
+        <a href="http://www.dwavesys.com/">D-Wave</a>
+        quantum computers.
+    </p>
+    <p>
+        These are currently the only commercially available quantum computers.
+        They are building quantum computers containing 512 qubits,
+        which in theory could be in a super position of
+        <span class="math">2<sup>512</sup></span> states.
+    </p>
+    <p>
+        Despite having such a large number of qubits,
+        there is little evidence that they have been solving
+        problems any faster than conventional computers.
+    </p>
+    <p>
+        D-Wave computers are special purpose
+        &ldquo;quantum annealing&rdquo; computers.
+        The quantum computers that I have been describing so far are
+        known as &ldquo;quantum gate&rdquo; computers.
+        Describing the differences are beyond the scope of this
+        (already long) article.
+    </p>
+    <p>
+        Currently, it seems that D-Wave may need more qubits,
+        or they may need to figure out how to make
+        more effective use of their existing qubits,
+        before they can start out performing conventional computers.
+        It is not clear whether they will achieve this
+        before the required break throughs are made to enable
+        quantum gate computers to beat them to it.
+    </p>
+</section>
+
+<section>
     <h1>Some philosophy</h1>
     <p>
         Describing quantum computing
@@ -847,7 +884,7 @@
     </p>
     <p>
         If the amplitudes for the 0 and 1 states of a qubit are
-        the (possibly comlex) numbers
+        the (possibly complex) numbers
         <span class="math">a<sub>0</sub></span>
         and
         <span class="math">a<sub>1</sub></span>
