rename qtalk.css -> main.css

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>An Interactive Introduction To Quantum Computing</title>
-<link rel="stylesheet" href="qtalk.css" />
+<link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
