--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -71,11 +71,11 @@
     </p>
     <figure>
         <div class="labelledImage">
-            <img src="spinDown.jpg" alt="Spin Down" class="nuclearSpin"/>
+            <img src="spinDown.svg" alt="Spin Down" class="nuclearSpin"/>
             <div class="labelledImage_label nuclearSpinLabel">0</div>
         </div>
         <div class="labelledImage">
-            <img src="spinUp.jpg" alt="Spin Up" class="nuclearSpin"/>
+            <img src="spinUp.svg" alt="Spin Up" class="nuclearSpin"/>
             <div class="labelledImage_label nuclearSpinLabel">1</div>
         </div>
     </figure>
@@ -640,7 +640,7 @@
     </p>
 </section>
 
-<section>
+<section class="attributions">
     <h1>Attributions</h1>
     <p>Michelson Interferometer: http://commons.wikimedia.org/wiki/File:Michaelson_with_letters.jpg</p>
     <p>Interference Pattern: http://commons.wikimedia.org/wiki/File:Zonenplatte_Cosinus.png</p>
