Set viewport metadata in the hope it may look a little better on a mobile device

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="initial-scale=1.0, width=device-width" />
 <title>An Interactive Introduction To Quantum Computing</title>
 <link rel="stylesheet" href="main.css" />
 </head>
@@ -18,7 +19,7 @@
     <p>DRAFT</p>
     
     <small>
-        This is Part 1 of a two part series
+        This is Part one of a two part series
         for those that want to
         learn a little about quantum computing,
         but lack the quantum physics background required
