--- a/qtalk3/part2.html
+++ b/qtalk3/part2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="initial-scale=1.0, width=device-width" />
 <title>An Interactive Introduction To Quantum Computing Part 2</title>
 <link rel="stylesheet" href="main.css" />
 </head>
@@ -189,16 +190,16 @@
             <div>
                 <button class="operator" data-operator="f00"
                     data-skipInterferenceSteps
-                    data-qubits="0">Flip Phase of 00</button>
+                    data-qubits="0">Phase Flip 00</button>
                 <button class="operator" data-operator="f01"
                     data-skipInterferenceSteps
-                    data-qubits="0">Flip Phase of 01</button>
+                    data-qubits="0">Phase Flip 01</button>
                 <button class="operator" data-operator="f10"
                     data-skipInterferenceSteps
-                    data-qubits="0">Flip Phase of 10</button>
+                    data-qubits="0">Phase Flip 10</button>
                 <button class="operator" data-operator="f11"
                     data-skipInterferenceSteps
-                    data-qubits="0">Flip Phase of 11</button>
+                    data-qubits="0">Phase Flip 11</button>
             </div>
         </div>
         <svg class="qstateSvg qstateSvg__hideBitLabels"></svg>
@@ -357,7 +358,7 @@
                         data-qubits="0" data-step="6">Hadamard qubit-b</button>
                 </div>
                 <div>
-                    <button class="reset" data-step="7">Reset</button>
+                    <button class="reset">Reset</button>
                 </div>
             </div>
         </div>
