Minor styling changes

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -10,20 +10,20 @@
 <body>
 <section>
     <h1>An Interactive Introduction To Quantum Computing</h1>
-    <img src="animated-qubits.png" class="titleImage" alt="qubit animation"/>
     <div class="subtitle">
         Or <em>What Do You Mean They Can Be Both Zero And One At The Same Time!</em>
     </div>
+    <img src="animated-qubits.png" class="titleImage" alt="qubit animation"/>
     <p>By David Kemp</p>
     <p>@david_b_kemp</p>
     <p>DRAFT</p>
     
     <small>
-        This is Part one of a two part series
+        This is part one of a two part series
         for those that want to
         learn a little about quantum computing,
-        but lack the quantum physics background required
-        by most serious introductions.
+        but lack the mathematics and quantum physics background required
+        by many of the introductions out there.
         It covers some of the basics of quantum computing,
         such as qubits, state phases, and quantum interference.
         <a href="part2.html">Part 2</a>
