--- a/qtalk3/part2.html
+++ b/qtalk3/part2.html
@@ -672,9 +672,9 @@
         <li>
             If you want to experiment with the various qubit operators,
             then have a play with the
-            <em><a href="http://davidbkemp.github.io/quantum-gate-playground/">
+            <a href="http://davidbkemp.github.io/quantum-gate-playground/">
                 Quantum Computer Gate Playground
-            </a></em>.
+            </a>.
         </li>
         <li>
             Try doing some quantum programming using
