Wrap main content in article tags

--- a/qtalk3/part2.html
+++ b/qtalk3/part2.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<article>
 <section>
     <h1>An Interactive Introduction To Quantum Computing Part 2</h1>
     <div class="subtitle">
@@ -696,6 +697,6 @@
 <script src="http://code.jquery.com/jquery-2.1.0.js"></script>
 <script src="dist/main.js"></script>
 <script src="browserSupportDetection.js"></script>
-
+</article>
 </body>
 </html>
