Rearrange first two sections

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -19,21 +19,6 @@
     <p>@david_b_kemp</p>
     <p>DRAFT</p>
     
-    <small>
-        This is part one of a two part series
-        for those that want to
-        learn a little about quantum computing,
-        but lack the mathematics and quantum physics background required
-        by many of the introductions out there.
-        It covers some of the basics of quantum computing,
-        such as qubits, state phases, and quantum interference.
-        <a href="part2.html">Part 2</a>
-        goes on to look at quantum search.
-    </small>
-</section>
-
-<section>
-    <h2>Quantum Computers?</h2>
     <p>Heard of quantum computers?</p>
     <p>Heard that they are faster than conventional computers?</p>
     <p>Perhaps you have heard of quantum bits (abbreviated to qubits).</p>
@@ -43,12 +28,24 @@
         <em>both at the same time</em></b>.
     </p>
     <p>Let me try to explain what this really means.</p>
+    
+    <p>
+        This is part one of a two part series
+        for those that want to
+        learn a little about quantum computing,
+        but lack the mathematics and quantum physics background required
+        by many of the introductions out there.
+        It covers some of the basics of quantum computing,
+        such as qubits, state phases, and quantum interference.
+        <a href="part2.html">Part 2</a>
+        goes on to look at quantum search.
+    </p>
 </section>
 
 <section>
-    <h2>Conventional Bits</h2>
+    <h2>Qubits</h2>
     <p>
-        I assume you know what good old conventional binary bits are.
+        I assume you know what plain old ordinary binary bits are.
         <span class="help">
             Sorry, I but cannot assume you know nothing at all!
         </span>
@@ -59,11 +56,7 @@
         pulses of light on a glass fibre,
         etc. etc.
     </p>
-</section>
-
-<section>
-    <h2>Qubits</h2>
-    <p>Just like bits, qubits have a binary state.</p>
+    <p>Just like bits, <em>qubits</em> have a binary state.</p>
     <p>
         <b>Qubits represent 0 and 1 using quantum phenomenon like
         the nuclear spin direction of individual atoms</b>.
@@ -291,7 +284,7 @@
 
 <section>
 <h2>Hadamard of 1</h2>
-    <p>Things start to get weird when you look at the Hadamard of 1.</p>
+    <p>Things start to become weird when you look at the Hadamard of 1.</p>
     <p>Look carefully at the arrow directions.</p>
     <div class="animationBlock" id="hadamardOf1Example">
         <div class="animationBlock_buttons">
@@ -602,6 +595,7 @@
         is splitting each photon in two
         and that the interference effects are caused by the two photons
         interacting with each other.
+        But this is not what happens.
     </p>
     <p>
         If detectors are placed on the two paths,
@@ -612,7 +606,8 @@
         <b>They never detect two photons at once!</b>
         (Well, they very occasionally do due to the light source
         very occasionally emitting two at once,
-        but the frequency that this should happen is easily predicted.)
+        but the frequency that this should happen is
+        easily predicted and verified.)
     </p>
    
     <p>
