Remove section tags as they were interfering with Safari Reader.  Use the google CDN for jquery in the hope that it is faster than jquery's own CDN

--- a/article/part2.html
+++ b/article/part2.html
@@ -9,7 +9,7 @@
 
 <body>
 <article>
-<section>
+
     <h1>An Interactive Introduction To Quantum Computing Part 2</h1>
     <div class="subtitle">
         <b>Quantum Search</b>
@@ -24,10 +24,10 @@
         faster than conventional computers.
     </p>
     <p>DRAFT</p>
-</section>
 
 
-<section>
+
+
 <h2>Multiple qubits</h2>
 <p>
     <b>Important</b>: There is something really important I feel the need to emphasize
@@ -40,9 +40,9 @@
     then please hang in there,
     it will hopefully become aparent very soon.
 </p>
-</section>
 
-<section>
+
+
 <h2>Controlled NOT</h2>
 <p>
     The <em>Controlled NOT</em> operator is a very simple but powerful
@@ -79,9 +79,9 @@
     <li>10 &rarr; 11 (i.e. target bit flips)</li>
     <li>11 &rarr; 10 (i.e. target bit flips)</li>
 </ul>
-</section>
 
-<section>
+
+
     <h2>Quantum Entanglement</h2>
     <p>
         A combination of the Hadamard followed by a Controlled NOT
@@ -139,9 +139,9 @@
         emphasise how quantum superposition can apply to
         the combined state of a number of qubits.
     </p>
-</section>
 
-<section>
+
+
     <h2>Arbitrary Logic Functions</h2>
     <p>
         In addition to the NOT operator that we have already seen,
@@ -162,9 +162,9 @@
         Before we can cover quantum search,
         there is one more quantum operator I need to introduce.
     </p>
-</section>
 
-<section>
+
+
     <h2>Controlled Phase Flip</h2>
     <p>
         Recall that the term <em>phase</em>,
@@ -207,9 +207,9 @@
     </div>
 
     
-</section>
 
-<section>
+
+
     <h2>Quantum Search</h2>
     <p>
         Imagine you are trying to crack an n-bit encryption key by brute force:
@@ -266,9 +266,9 @@
         a quantum computer can find the answer
         using a single invocation of the oracle function.
     </p>
-</section>
 
-<section>
+
+
     <h2>Quatum Search over 2 Qubits</h2>
     
     <p>
@@ -372,10 +372,10 @@
         unlike what happens in the animation,
         all the states change simultaneously.
     </p>
-</section>
 
 
-<section>
+
+
     <h2>Beyond Quantum Search</h2>
     <p>
         The two bit search is a bit of a special case
@@ -424,9 +424,9 @@
         The limiting factor is likely to be the number of qubits required
         since you need at least as many qubits as the key length.
     </p>
-</section>
 
-<section>
+
+
     <h2>D-Wave</h2>
     <p>
         You may have heard of
@@ -461,9 +461,9 @@
         it quite possibly will not be long before
         we start seeing impressive results.
     </p>
-</section>
 
-<section>
+
+
     <h2>Some philosophy</h2>
     <p>
         Describing quantum computing
@@ -554,10 +554,9 @@
         <a href="#usefulLinks">Useful Links Section</a>
         at the end.
     </p>
-</section>
 
-<section id="maths">
-<h2>Some mathematics</h2>
+
+<h2 id="maths">Some mathematics</h2>
     <p>
         In this article
         I used little blue disks with red arrows
@@ -653,9 +652,9 @@
         That is already more mathematics as I wanted to cover in this article.
         For more, see some of the useful links listed in the next section.
     </p>
-</section>
 
-<section>
+
+
     <h2 id="usefulLinks">Useful links</h2>
 
     <ul>
@@ -689,12 +688,12 @@
         </li>
     </ul>
 
-</section>
+
 
 <footer>
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">An Interactive Introduction To Quantum Computing</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">David Kemp</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.en_US">Creative Commons Attribution 4.0 International License</a>.</footer>
 
-<script src="http://code.jquery.com/jquery-2.1.0.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script src="dist/main.js"></script>
 <script src="browserSupportDetection.js"></script>
 </article>
