--- a/article/index.html
+++ b/article/index.html
@@ -137,7 +137,7 @@
         but it will help me explain the workings of some quantum operators.
     </p>
     <p>
-        Let&apos;s also assume that our particular Random NOT operator
+        Let&apos;s assume that our particular Random NOT operator
         has a 30% chance of flipping the bit.
         I.e. Regardless of whether the bit is 0 or 1,
         it has a 30% chance of flipping it to the opposite value,
